[package]
name = "hangdetect"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.8"
#dlopen = "0.1.8"
libc = "0.2.176"
log = "0.4.28"
simple-logging = "2.0.2"
anyhow = "1.0.100"
cpp_demangle = "0.5.0"
once_cell = "1.21.3"
object-pool = "0.6.0"
threadpool = "1.8.1"
serde = { version = "1.0.227", features = ["derive"] }
features = "0.10.0"
derive = "1.0.0"
serde_json = "1.0.145"
